<resources>
    <string name="app_name">한글을 한글로!</string>
    <string name="open_app">앱에서 보기</string>
    <string name="contents">Contents</string>
    <string name="main_selectbest">으뜸 정하기</string>
    <string name="main_today">오늘의 신조어</string>
    <string name="facebook_app_id">1213122912074048</string>
    <string name="common_policy">&lt;한글을 한글로!&gt; 는 다음의 목적을 위하여 개인정보를 처리하고 있으며, 다음의 목적 이외의 용도로는 이용하지 않습니다.
\n- 고객 가입의사 확인, 고객에 대한 서비스 제공에 따른 본인 식별.인증, 회원자격 유지.관리, 물품 또는 서비스 공급에 따른 금액 결제, 물품 또는 서비스의 공급.배송 등
\n\n<b>1. 개인정보의 처리 및 보유 기간</b>\n
① &lt;한글을 한글로!&gt;은(는) 정보주체로부터 개인정보를 수집할 때 동의 받은 개인정보 보유․이용기간 또는 법령에 따른 개인정보 보유․이용기간 내에서 개인정보를 처리․보유합니다.
\n
② 구체적인 개인정보 처리 및 보유 기간은 다음과 같습니다.
\n
고객 가입 및 관리 : 서비스 이용계약 또는 회원가입 해지시까지
\n\n
<b>2. 개인정보의 제3자 제공</b>
\n
&lt;한글을 한글로!&gt;은(는) 정보주체의 별도 동의, 법률의 특별한 규정 등 개인정보 보호법 제17조에 해당하는 경우 외에는 개인정보를 제3자에게 제공하지 않습니다.
\n\n
<b>3. 정보주체의 권리,의무 및 그 행사방법</b>
\n이용자는 개인정보주체로서 다음과 같은 권리를 행사할 수 있습니다.
\n① 정보주체는 &lt;한글을 한글로!&gt;에 대해 언제든지 다음 각 호의 개인정보 보호 관련 권리를 행사할 수 있습니다.
\n1. 개인정보 열람요구
\n2. 오류 등이 있을 경우 정정 요구
\n3. 삭제요구
\n4. 처리정지 요구
\n
\n
<b>4. 처리하는 개인정보의 항목 작성</b>
\n
① &lt;한글을 한글로!&gt;은(는) 다음의 개인정보 항목을 처리하고 있습니다.
\n-비밀번호, 로그인ID, 생년월일, 이름, 서비스 이용 기록, 접속 로그, 쿠키, 접속 IP 정보, SNS Token

\n
\n<b>5. 개인정보의 파기</b>
\n
&lt;한글을 한글로!&gt;은(는) 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체없이 해당 개인정보를 파기합니다. 파기의 절차, 기한 및 방법은 다음과 같습니다.
\n-파기절차
\n이용자가 입력한 정보는 목적 달성 후 별도의 DB에 옮겨져(종이의 경우 별도의 서류) 내부 방침 및 기타 관련 법령에 따라 일정기간 저장된 후 혹은 즉시 파기됩니다. 이 때, DB로 옮겨진 개인정보는 법률에 의한 경우가 아니고서는 다른 목적으로 이용되지 않습니다.
\n-파기기한
\n이용자의 개인정보는 개인정보의 보유기간이 경과된 경우에는 보유기간의 종료일로부터 5일 이내에, 개인정보의 처리 목적 달성, 해당 서비스의 폐지, 사업의 종료 등 그 개인정보가 불필요하게 되었을 때에는 개인정보의 처리가 불필요한 것으로 인정되는 날로부터 5일 이내에 그 개인정보를 파기합니다.
\n
\n
<b>6. 개인정보의 안전성 확보 조치</b>
        \n&lt;한글을 한글로!&gt;(\'한글을 한글로!\')은(는) 개인정보보호법 제29조에 따라 다음과 같이 안전성 확보에 필요한 기술적/관리적 및 물리적 조치를 하고 있습니다.
\n-1. 정기적인 자체 감사 실시
\n개인정보 취급 관련 안정성 확보를 위해 정기적(분기 1회)으로 자체 감사를 실시하고 있습니다.

\n-2. 개인정보 취급 직원의 최소화 및 교육
\n개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화 하여 개인정보를 관리하는 대책을 시행하고 있습니다.

\n-3. 내부관리계획의 수립 및 시행
\n개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.

\n-4. 해킹 등에 대비한 기술적 대책
\n&lt;한글을 한글로!&gt;은 해킹이나 컴퓨터 바이러스 등에 의한 개인정보 유출 및 훼손을 막기 위하여 보안프로그램을 설치하고 주기적인 갱신·점검을 하며 외부로부터 접근이 통제된 구역에 시스템을 설치하고 기술적/물리적으로 감시 및 차단하고 있습니다.

\n-5. 개인정보의 암호화
\n이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화 하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다.

\n-6. 접속기록의 보관 및 위변조 방지
\n개인정보처리시스템에 접속한 기록을 최소 6개월 이상 보관, 관리하고 있으며, 접속 기록이 위변조 및 도난, 분실되지 않도록 보안기능 사용하고 있습니다.

\n-7. 개인정보에 대한 접근 제한
\n개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.

\n-8. 문서보안을 위한 잠금장치 사용
\n개인정보가 포함된 서류, 보조저장매체 등을 잠금장치가 있는 안전한 장소에 보관하고 있습니다.

\n-9. 비인가자에 대한 출입 통제
\n개인정보를 보관하고 있는 물리적 보관 장소를 별도로 두고 이에 대해 출입통제 절차를 수립, 운영하고 있습니다.


\n
\n<b>7. 개인정보 보호책임자 작성</b>

\n① 한글을 한글로!은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.

\n개인정보 보호책임자
\n성명 :김태윤\n
직책 :팀장\n
직급 :팀장\n
연락처 :tyk117@edcan.kr
\n※ 개인정보 보호 담당부서로 연결됩니다.

\n개인정보 보호 담당부서
\n부서명 :개발본부
\n담당자 :김연준
\n연락처 :iwin247@edcan.kr

\n② 정보주체께서는 한글을 한글로!의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. 한글을 한글로!은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.

\n
\n<b>8. 개인정보 열람청구</b>
        \n① 정보주체는 개인정보 보호법 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다. &lt;한글을 한글로!&gt;은(는) 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다.
\n개인정보 열람청구 접수·처리 부서
\n부서명 : 개발본부
\n담당자 : 김연준
\n연락처 : iwin247@edcan.kr, iwin247@edcan.kr,

\n② 정보주체께서는 제1항의 열람청구 접수․처리부서 이외에, 행정안전부의 ‘개인정보보호 종합지원 포털’ 웹사이트(www.privacy.go.kr)를 통하여서도 개인정보 열람청구를 하실 수 있습니다.

\n행정안전부 개인정보보호 종합지원 포털 → 개인정보 민원 → 개인정보 열람등 요구 (본인확인을 위하여 아이핀(I-PIN)이 있어야 함)

\n
\n<b>9. 개인정보 열람청구</b>
\n아래의 기관은 &lt;사업자/단체명&gt; 과는 별개의 기관으로서, &lt;한글을 한글로!&gt;의 자체적인 개인정보 불만처리, 피해구제 결과에 만족하지 못하시거나 보다 자세한 도움이 필요하시면 문의하여 주시기 바랍니다.

\n개인정보 침해신고센터 (한국인터넷진흥원 운영)
\n- 소관업무 : 개인정보 침해사실 신고, 상담 신청
\n- 홈페이지 : privacy.kisa.or.kr
\n- 전화 : (국번없이) 118\n
- 주소 : (138-950) 서울시 송파구 중대로 135 한국인터넷진흥원 개인정보침해신고센터

\n개인정보 분쟁조정위원회 (한국인터넷진흥원 운영)
\n- 소관업무 : 개인정보 분쟁조정신청, 집단분쟁조정 (민사적 해결)
\n- 홈페이지 : privacy.kisa.or.kr
\n- 전화 : (국번없이) 118
\n- 주소 : (138-950) 서울시 송파구 중대로 135 한국인터넷진흥원 개인정보침해신고센터

\n대검찰청 사이버범죄수사단 : 02-3480-3573 (www.spo.go.kr)
\n경찰청 사이버범죄수사단 : 1566-0112 (www.netan.go.kr)



\n\n<b>10. 개인정보 처리방침 변경</b>
\n①이 개인정보처리방침은 시행일로부터 적용되며, 법령 및 방침에 따른 변경내용의 추가, 삭제 및 정정이 있는 경우에는 변경사항의 시행 7일 전부터 공지사항을 통하여 고지할 것입니다.
    </string>
    <string name="search">검색</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="find_word">신조어 찾기</string>
</resources>
