<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/big_margin"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo_login_hangeulro" />

                <EditText
                    android:id="@+id/authIdInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/round_login_field"
                    android:hint="@string/email"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:singleLine="true"
                    android:text="asdf"
                    android:textColor="@color/textColorDark"
                    android:textColorHint="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/authPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:background="@drawable/round_login_field"
                    android:hint="@string/password"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:singleLine="true"
                    android:textColor="@color/textColorDark"
                    android:textColorHint="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/authIDLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:background="@drawable/round_login_id"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/login"
                    android:textColor="#FFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/authFacebookLaunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/authTwitterLaunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</layout>