<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A1A1A1"
        android:orientation="vertical"
        android:weightSum="10"
        tools:context="kr.edcan.neologism.activity.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="3"
            android:background="@color/colorPrimary">

            <android.support.v4.view.ViewPager
                android:id="@+id/mainHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="16dp"
                android:text="@string/contents"
                android:textColor="#FFF"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/mainPagerCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"></LinearLayout>
        </RelativeLayout>


        <LinearLayout
            android:background="#262626"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark">

                    <LinearLayout
                        android:id="@+id/mainSelectBest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_main_survey" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/main_selectbest"
                            android:textColor="#FFF"
                            android:textSize="18sp" />
                    </LinearLayout>
                </RelativeLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />

                <RelativeLayout
                    android:id="@+id/mainToday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_main_today" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/main_today"
                            android:textColor="#FFF"
                            android:textSize="18sp" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <ListView
                android:id="@+id/mainListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D2D2D2" />
        </LinearLayout>
    </LinearLayout>
</layout>